Add(feature): Guest and messages

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL = mongodb+srv://nuxt-sample:91azhHbCLj4QBPmG@cluster0.lry5c.mongodb.net/test
+DATABASE_URL = mongodb+srv://kaween-root:96xy1fdDhwQ7cSxo@kaween.lry5c.mongodb.net/test
